Closed
Bug 580932
Opened 15 years ago
Closed 15 years ago
Firefox' strict error reporting prevents ES 5 test suite from running
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla2.0b4
People
(Reporter: webmaster, Assigned: Waldo)
References
()
Details
(Whiteboard: fixed-in-tracemonkey)
User-Agent: Mozilla/5.0 (X11; Linux i686; rv:2.0b2pre) Gecko/20100720 Minefield/4.0b2pre
Build Identifier: Mozilla/5.0 (X11; Linux i686; rv:2.0b2pre) Gecko/20100720 Minefield/4.0b2pre
When I enable "javascript.options.strict" in about:config for Minefield, it will not run the ES5 test suite, downloaded from http://es5conform.codeplex.com/ (also available at http://kangax.github.com/es5-testsuite/).
It chokes on 12.2.1-11 "arguments as var identifier in eval code is allowed".
If I also turn on "javascript.options.werror" the test suite seems to run, but it will not produce any results. In this case it finishes with an empty page.
This has been discussed in comment 7+ in bug 482298.
Reproducible: Always
Steps to Reproduce:
1. Turn on "javascript.options.strict"
2. Run test suite at URL
3. Halt at 12.2.1-11
1. Also enable "javascript.options.werror"
2. Run test suite at URL
3. Error console gets lots of errors but the end result is an empty page
Expected Results:
Tests should run. Results should be displayed.
| Assignee | ||
Updated•15 years ago
|
Assignee: general → jwalden+bmo
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 1•15 years ago
|
||
Oops, swallowed a return value in CheckStrictBinding:
http://hg.mozilla.org/tracemonkey/rev/e5a8e971443c
That should fix the strict-mode failure, looking into the werror bit now...
OS: Linux → All
Hardware: x86 → All
Target Milestone: --- → mozilla2.0b4
| Assignee | ||
Comment 2•15 years ago
|
||
Actually, come to think of it, werror is not going to work. Since it converts even non-ES5-strict-mode warnings into errors, it is more conservative than the ES5 spec mandates, and therefore you will get failures even on sites (and test suites) that should work. So the werror part of this report is WONTFIX.
And with that, this is fixed in TM.
Whiteboard: fixed-in-tracemonkey
| Reporter | ||
Comment 3•15 years ago
|
||
Tested in latest nightly and I can confirm it works.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•