Bug 580932 - Firefox's strict error reporting prevents ES5 test suite from running.  r=jimb over IRC